<resources>
    <string name="app_name">HarriTask</string>
    <string name="title_activity_country">Country Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mohammad Amarneh</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="region">Region</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date">Date</string>
    <string name="temp">Temp</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
</resources>
