<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.amarnehsoft.harritask.ui.country.countryWeatherFragment.CountryWeatherFragmentViewModel" />

        <import type="com.amarnehsoft.harritask.utils.DateUtils" />

        <import type="java.lang.String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        tools:context=".ui.country.countryWeatherFragment.CountryWeatherFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/date"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtDate"
                    android:text="@{DateUtils.format(viewModel.date)}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/temp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtTemp"
                    android:text="@{viewModel.maxTemp + ` - ` + viewModel.minTemp}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/pressure"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtPressure"
                    android:text="@{String.valueOf(viewModel.pressure)}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/humidity"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtHumidity"
                    android:text="@{String.valueOf(viewModel.humidity)}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>

